# marrtino_gazebo

./: CMakeLists.txt  README.md
config/: marrtino_controllers.yaml
docker/: Dockerfile.gazebo  Dockerfile.system  build.bash  build_no-cache.bash  dc_vnc.yml  docker-compose.yml  pull.bash  run.bash  run_vnc.bash
launch/: marrtino.launch.py
marrtino_control/: LICENSE  package.xml  setup.cfg  setup.py
marrtino_control/marrtino_control/: control.py  marrtino_parameters.py
marrtino_gazebo/: CMakeLists.txt  package.xml
marrtino_gazebo/launch/: marrtino.launch.py
marrtino_gazebo/urdf/: inertia.xacro  marrtino.urdf.xacro  smarrtino.urdf.xacro
marrtino_gazebo/urdf/meshes/: smarrtino_arm_left.stl  smarrtino_arm_right.stl  smarrtino_head.stl
marrtino_gazebo/worlds/: empty.world
src/: control.py
urdf/: inertia.xacro  marrtino.urdf.xacro
worlds/: empty.world
